--- a/web/app/app/index.html
+++ b/web/app/app/index.html
@@ -40,7 +40,7 @@
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle nav-item-iconic" id="navbar-menu-help" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                <span data-translate-attr="{ title: 'HELP.HELP' }" class="fa pficon-help"></span>
+                                <span data-translate-attr="{ title: 'HELP.HELP' }" class="pficon pficon-help"></span>
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbar-menu-help">
