replace url domain by http://jmri.org found a couple more in help and cpe

--- a/xml/XSLT/CSVindex.html
+++ b/xml/XSLT/CSVindex.html
@@ -5,15 +5,16 @@
     <meta name="author" content="Bob Jacobsen, JMRI">
     <title>JMRI Decoder Comma-Separated Values files</title>
     <!-- Style -->
-    <link rel="stylesheet" type="text/css" href="http://jmri.sourceforge.net/css/default.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="http://jmri.sourceforge.net/css/print.css" media="print">
-    <link rel="icon" href="http://jmri.sourceforge.net/images/jmri.ico" type="image/png">
-    <link rel="home" title="Home" href="/">
+    <link rel="stylesheet" type="text/css" href="http://jmri.org/css/default.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="http://jmri.org/css/print.css" media="print">
+    <link rel="icon" href="http://jmri.org/images/jmri.ico" type="image/png">
+    <link rel="home" title="Home" href="http://jmri.org/">
     <!-- /Style -->
 </head>
 <body>
 <div class="nomenu" id="mBody">
-    <a href="/index.html"><img src="http://jmri.sourceforge.net/images/logo-jmri.gif" align="right" width="160" height="135" hspace="0" vspace="0"></a>
+    <a href="http://jmri.org/index.html"><img src="http://jmri.org/images/logo-jmri.gif" align="right" width="160" height="135"
+                               hspace="0" vspace="0"></a>
     <div id="mainContent">
     <h1>JMRI Decoder Comma-Separated Values files</h1>
     <p>
@@ -38,12 +39,12 @@
         </ul>
 
         <p>Thanks and congratulations to
-        <a href="http://jmri.sourceforge.net/help/en/Acknowledgements.shtml" title="Who is JMRI">
+        <a href="http://jmri.org/help/en/Acknowledgements.shtml" title="Who is JMRI">
             all who contributed</a>!</p>
 
         <p>Copyright &copy; 1997 - 2018 JMRI Community.
         <p>JMRI&reg;, DecoderPro&reg;, PanelPro&trade;, SignalPro&trade;, TrainPro&trade;, DispatcherPro&trade;, OperationsPro&trade; and associated logos are our trademarks.
-        <p><a href="http://jmri.sourceforge.net/Copyright.html">Additional information on copyright,
+        <p><a href="http://jmri.org/Copyright.html">Additional information on copyright,
             trademarks and licenses is linked here.</a></p>
 
         <br>Site hosted by:<br>
