--- a/xml/XSLT/index.html
+++ b/xml/XSLT/index.html
@@ -65,8 +65,8 @@
                 trademarks and licenses is linked here.</a></p>
 
             <br>Site hosted by:<br>
-            <a href="http://sourceforge.net/projects/jmri/"><img src="https://sourceforge.net/sflogo.php?group_id=26788&type=12" width="120" height="30" border="0"
-                                                                 alt="Get JMRI Model Railroad Interface at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a>
+                <a href="http://sourceforge.net/projects/jmri">
+    <img src="https://sourceforge.net/sflogo.php?type=13&amp;group_id=26788" border="0" alt="JMRI Model Railroad Interface at SourceForge.net"/></a>
         </div>
     </div><!-- closes #mainContent-->
 </div><!-- closes #mBody-->
