Improve Gv node table frame more Gc sim replies Dutch translation

--- a/java/src/jmri/jmrix/grapevine/package.html
+++ b/java/src/jmri/jmrix/grapevine/package.html
@@ -15,6 +15,9 @@
             messages, and does not correspond to a node.  The nodes
             have addresses 1 through 127. These are mapped to e.g. GT1 through GT126001
             for their first outputs.
+        <p>
+            Use the Grapevine Simulator connection type to pretend all nodes are present.
+            Feature introduced in JMRI 4.11.4.
 
         <h2>TODO</h2>
         <ul>
