--- a/java/src/jmri/jmrix/grapevine/package.html
+++ b/java/src/jmri/jmrix/grapevine/package.html
@@ -20,7 +20,7 @@
 
         <pre>
         b2 (element 1): id + state      b4 (element 3): bank + parity
-        bit/id (0 - F = 16 poss.)       bank 1 			    0001 ....
+        bit/id (1 - F = 15 poss.)       bank 1 			    0001 ....
                          .000 1...      bank 2 			    0010 ....
                          .001 0...      bank 3 			    0011 ....
                          .001 1...
@@ -36,7 +36,7 @@
         <h3>Sensors (bank 4 and 5)</h3>
         <pre>
         b2 (element 1) : id + state      b4 (element 3): bank + parity
-        bit/id (00 - 3F = 64 poss.)      bank 4 (new serial)	0100 ....
+        bit/id (01 - 3F = 63 poss.)      bank 4 (new serial)	0100 ....
         .000 001.                        bank 5 			    0101 ....
         .000 010.
         .000 011.                        parity 			    .... xxxx
@@ -47,7 +47,7 @@
         Sensor State:
         (4) Active 	    .... ...0
         (4) Inactive 	.... ...1
-        (5) Bit States	.... 1010
+        (5) Bit States	.... 1010 (set of 4 Active/Inactive bits for Parallel Sensors on Bank 5)
 
         Sensor Type:
         Parallel 		.00. ....
